Test web server project added.

--- a/public/index.html
+++ b/public/index.html
@@ -10,6 +10,6 @@
       Willkommen to Frontend!
     </div>
     <button id="button">Translate</button>
-    <script src="../script.js"></script>
+    <script src="/script.js"></script>
   </body>
 </html>
