hello in about html.

--- a/public/about.html
+++ b/public/about.html
@@ -5,6 +5,8 @@
     <title>Document</title>
   </head>
   <body>
-    This is about html document.
+    Hello!<br />
+    This is about html document. <br />
+    Created by Anastasiya Puchnina. <br />
   </body>
 </html>
